<resources>
    <string name="app_name">RoomDemo</string>

    <string name="id">ID</string>
    <string name="user_id">USER ID</string>
    <string name="name">NAME</string>
    <string name="age">AGE</string>
    <string name="create_new">Create New</string>
    <string name="upate">Upate</string>
    <string name="delete">Delete</string>
    <string name="see">See</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>